Support backend for git

--- a/distancia/src/main/resources/application.yml
+++ b/distancia/src/main/resources/application.yml
@@ -8,3 +8,11 @@ spring:
 caelum:
   system:
     url: http://localhost
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+          - health
+          - info
+          - refresh
