--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -9,13 +9,16 @@ spring:
       server:
         git:
           uri: https://github.com/fwfurtado/micro-8744/
+          search-paths: config-files
           repos:
             prod:
               pattern:
                 - "*/prod"
+              uri: ${spring.cloud.config.server.git.uri}
               search-paths: config-files/prod
             qa:
               pattern:
                 - "*/qa"
+              uri: ${spring.cloud.config.server.git.uri}
               search-paths: config-files/qa
 
